# src/api/controllers/users.controller.ts
@@ -3,7 +3,7 @@ import { UsersUseCase } from 'src/core/use-cases/users.use-case';
 import { JwtAuthGuard } from '../guards/jwt-auth.guard';
 import { UserEntity, UserModel } from 'src/infra/postgres/entities/user.entity';
 import { User } from '../decorators/user.decorator';
-import { ApiOkResponse, ApiTags } from '@nestjs/swagger';
+import { ApiOkResponse, ApiSecurity, ApiTags } from '@nestjs/swagger';
 import { Mapper } from '@automapper/core';
 import { InjectMapper } from '@automapper/nestjs';
 import { UserWithPokemonsOutputDTO } from '../dtos/users/user-with-pokemons.output.dto';
@@ -19,6 +19,7 @@ export class UsersController {
   ) {}
 
   @ApiOkResponse({ type: UserWithPokemonsOutputDTO })
+  @ApiSecurity('AccessToken')
   @Get('me')
   @UseGuards(JwtAuthGuard)
   public async getMe(@User() user: UserModel) {
